Create roadmap apis with all fields
